# RecordWithRS

./: .gitignore  CMakeLists.txt  README.md  Source.cpp  build.sh
include/: cv-helpers.hpp
python/: DepthCamera_2018-09-19-21-56-47.json  analysis.py  chair_tracker.py  object_finder.py  object_getter.py  object_trackering_demo.py  object_viewer.py  open3d_chain.py  opencv_viewer.py  pinholeCameraTrajectory2.json  pinholeCameraTrajectory3.json  pointcloud.pcd  pose_getter.py  pyrs.py  rendering.py  rendering_demo.py  rgb_vis.py  utils.py
python/notebook/: Data Manupulation.ipynb  Object Detection.ipynb  Pose Detector.ipynb  pose_analysis.ipynb
python/notebook/.ipynb_checkpoints/: Data Manupulation-checkpoint.ipynb  Object Detection-checkpoint.ipynb  Pose Detector-checkpoint.ipynb  pose_analysis-checkpoint.ipynb
python/notebook/old_notebooks/.ipynb_checkpoints/: Object Detection-checkpoint.ipynb  Pose Detector-checkpoint.ipynb
python/static_data/: T.csv  camera_pc.pcd  d415.json  pinholeCameraTrajectory.json  pointcloud.pcd  realsense_intrinsic.json
scripts/: build.sh  rm_data.sh
src/: CMakeLists.txt  example.hpp  rs-capture.cpp
